libfiu (0.94-2) UNRELEASED; urgency=medium

  * Don't hide compiler warnings by passing V=1 to upstream Makefiles.

 -- Chris Lamb <lamby@debian.org>  Sun, 16 Aug 2015 07:48:37 +0200

libfiu (0.94-1) unstable; urgency=medium

  * New upstream version.
  * Bump Standards-Version to 3.9.6.
  * Bump Debhelper compatibility level to 9.
  * wrap-and-sort.
  * Drop 01-fix-ftbfs-on-i386.diff - applied upstream.
  * Add dh-python to Build-Depends.
  * Update debian/symbols.

 -- Chris Lamb <lamby@debian.org>  Sat, 15 Aug 2015 10:57:19 +0200

libfiu (0.93-2) unstable; urgency=low

  * Add patch from upstream to fix FTBFS on i386.

 -- Chris Lamb <lamby@debian.org>  Wed, 30 Jul 2014 10:44:42 +0100

libfiu (0.93-1) unstable; urgency=medium

  * New upstream release.
  * Strip Debian revision from symbols.

 -- Chris Lamb <lamby@debian.org>  Tue, 29 Jul 2014 07:43:46 +0100

libfiu (0.92-1) unstable; urgency=low

  * New upstream release.
  * Add "this work is to be considered Public Domain" to debian/copyright.
    Thanks to Ansgar Burchardt.
  * Bump Standards-Version to 3.9.4.
  * Update debian/symbols.

 -- Chris Lamb <lamby@debian.org>  Wed, 30 Oct 2013 11:20:24 +0000

libfiu (0.91-2) unstable; urgency=low

  * Require the testsuite to pass at request of upstream - was optional since
    0.90-3.
  * Add/fix support for python3:
    - Add python3-fiu binary to debian/control
    - Adjust debian/rules to build for all versions
    - Change python/python3 build deps to python{3}-all-dev to support build
      for all versions
    Thanks to Scott Kitterman <debian@kitterman.com>.
  * Move to dh_python2. Thanks to Scott Kitterman <debian@kitterman.com>.

 -- Chris Lamb <lamby@debian.org>  Thu, 23 May 2013 00:49:47 +0100

libfiu (0.91-1) unstable; urgency=low

  * New upstream release.
  * Update symbols.
  * Drop 01_wrap_python_for_tests.diff - applied upstream.
  * Drop 02_include_stdlib.diff - applied upstream.
