@@ -1,8 +1,8 @@
 #!/usr/bin/make -f
 
 DOCS = $(patsubst %.rst,%.html, $(wildcard doc/*.rst))
-buildvers := $(shell pyversions -sv)
-build3vers := $(shell py3versions -sv)
+PYTHON2_VERSIONS := $(shell pyversions -sv)
+PYTHON3_VERSIONS := $(shell py3versions -sv)
 
 %:
 	dh $@ --with python3,python2
@@ -16,11 +16,11 @@ doc/%.html: doc/%.rst
 override_dh_auto_build: $(DOCS)
 	dh_auto_build -- V=1
 	cd bindings/python \
-	set -e && for i in $(buildvers); do \
+	set -e && for i in $(PYTHON2_VERSIONS); do \
 	  python$$i ./setup.py build; \
 	done
 	cd bindings/python \
-	set -e && for i in $(build3vers); do \
+	set -e && for i in $(PYTHON3_VERSIONS); do \
 	  python$$i ./setup.py build; \
 	done
 
@@ -30,11 +30,11 @@ override_dh_auto_test:
 override_dh_auto_install:
 	make install PREFIX=$(CURDIR)/debian/tmp/usr DESTDIR=/usr PLIBPATH=/usr/lib/fiu
 	cd bindings/python \
-	set -e && for i in $(buildvers); do \
+	set -e && for i in $(PYTHON2_VERSIONS); do \
 	  python$$i ./setup.py install --root=$(CURDIR)/debian/python-fiu --no-compile -O0 --install-layout=deb; \
 	done
 	cd bindings/python \
-	set -e && for i in $(build3vers); do \
+	set -e && for i in $(PYTHON3_VERSIONS); do \
 	  python$$i ./setup.py install --root=$(CURDIR)/debian/python3-fiu --no-compile -O0 --install-layout=deb; \
 	done
 
