@@ -1,6 +1,7 @@
 libfiu (0.94-2) UNRELEASED; urgency=medium
 
   * Don't hide compiler warnings by passing V=1 to upstream Makefiles.
+  * Rename buildvers -> PYTHON2_VERSIONS, etc.
 
  -- Chris Lamb <lamby@debian.org>  Sun, 16 Aug 2015 07:48:37 +0200
 
